Update. New features

--- a/options/index.html
+++ b/options/index.html
@@ -12,6 +12,10 @@
 
     <body>
         <header>
+        <div class="donate-cont">
+            <span class="donate-label">Yandex.Money:</span>
+            <span class="donate-val">410012023528604</span>
+        </div>
         </header>
         <div class="nav-cont">
             <div class="nav-top"></div>
@@ -40,9 +44,9 @@
                 <li>
                     <input type="radio" name="nav_menu" i18n-content="other">
                 </li>
-                <li>
-                    <input type="radio" name="nav_menu" data-i18n="Donate">
-                </li>
+<!--                 <li>
+    <input type="radio" name="nav_menu" data-i18n="Donate">
+</li> -->
             </menu>
             <div class="nav-bottom"></div>
         </div>
@@ -304,14 +308,11 @@
                     </div>
                 </div>
             </div>
-            <div class="options-wrap tab-content">
-                <div class="wrapper">
-                    <div>
-                        <span class="donate-label">Yandex.Money:</span>
-                        <span class="donate-val">410012023528604</span>
-                    </div>
-                </div>
-            </div>
+<!--             <div class="options-wrap tab-content">
+    <div class="wrapper">
+
+    </div>
+</div> -->
         </div>
         <footer>
             <div class="message">
@@ -319,6 +320,7 @@
             </div>
         </footer>
 </div>
+<script src="/engine/migrate.js"></script>
 <script src="/engine/core.js"></script>
 <script src="/engine/dom.js"></script>
 <script src="/js/lib/jquery.js"></script>
