--- a/options/index.html
+++ b/options/index.html
@@ -9,7 +9,15 @@
         <link rel="stylesheet" type="text/css" href="ui.css">
         <script src="/js/engine/migrate.js"></script>
         <script src="/js/engine/core.js"></script>
-        <script src="loader.js"></script>
+        <script src="/js/engine/dom.js"></script>
+        <script src="/js/engine/event.js"></script>
+        <script src="/js/engine/config.js"></script>
+        <script src="/js/engine/options.js"></script>
+        <script src="/js/engine/storage.js"></script>
+        <script src="/js/engine/api/support.js"></script>
+        <script src="/js/engine/api/methods.js"></script>
+        <script src="/js/engine/api/port/content.js"></script>
+        <script src="/js/engine/api/chrome.js"></script>
     </head>
     <body>
         <div id="container">
@@ -270,5 +278,7 @@
                 </div>
             </div>
         </div>
+        <script src="ui.js"></script>
+        <script src="init.js"></script>
     </body>
 </html>
