--- a/options/index.html
+++ b/options/index.html
@@ -115,6 +115,11 @@
                                             </label>
                                             <div class="hidden-el">
                                                 <div class="block">
+                                                    <input type="checkbox" id="sidebar-lastfm-groupbyalbum">
+                                                    <label class="stl" for="sidebar-lastfm-groupbyalbum">Группировать треки по альбомам
+                                                    </label>
+                                                </div>
+                                                <div class="block">
                                                     <input type="checkbox" id="sidebar-lastfm-searchAndPlay">
                                                     <label class="stl" for="sidebar-lastfm-searchAndPlay">Включить функцию "Найти и воспроизвести"
                                                         <span class="labelx red">Экспериментальная функция</span>
