--- a/options/index.html
+++ b/options/index.html
@@ -8,16 +8,17 @@
         <link rel="stylesheet" type="text/css" href="/css/animation.css">
         <link rel="stylesheet" type="text/css" href="ui.css">
         <script src="/js/engine/migrate.js"></script>
-        <script src="/js/engine/core.js"></script>
-        <script src="/js/engine/dom.js"></script>
-        <script src="/js/engine/event.js"></script>
+
         <script src="/js/engine/config.js"></script>
-        <script src="/js/engine/options.js"></script>
-        <script src="/js/engine/storage.js"></script>
+        <script src="/js/engine/core/core.js"></script>
+        <script src="/js/engine/core/dom.js"></script>
+        <script src="/js/engine/core/event.js"></script>
+        <script src="/js/engine/core/storage.js"></script>
         <script src="/js/engine/api/support.js"></script>
         <script src="/js/engine/api/methods.js"></script>
         <script src="/js/engine/api/port/content.js"></script>
         <script src="/js/engine/api/chrome.js"></script>
+        <script src="/js/engine/options.js"></script>
     </head>
     <body>
         <div id="container">
@@ -277,6 +278,9 @@
                                     <span class="donate-label">Yandex.Money:</span>
                                     <span class="donate-val">410012023528604</span>
                                 </div>
+
+                                <!-- Разместите этот код в том месте, где должен отображаться виджет -->
+<div class="ewm-widget-donate" data-guid="9b6f8a2e-707c-45f6-9788-5889eccb67c2" data-type="widget" data-height="169" data-width="192"></div>
                             </div>
                         </div>
                     </div>
