--- a/options/index.html
+++ b/options/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="ui.css">
         <script src="/js/engine/migrate.js"></script>
 
-        <script src="/js/engine/config.js"></script>
+        <script src="/js/engine/constants.js"></script>
         <script src="/js/engine/core/core.js"></script>
         <script src="/js/engine/core/dom.js"></script>
         <script src="/js/engine/core/event.js"></script>
@@ -152,15 +152,7 @@
                                 <div class="block">
                                     <input type="checkbox" id="common-remove-ads">
                                     <label class="stl" for="common-remove-ads" i18n-content="remove_ads"></label>
-                                </div>
-                                <div class="block">
-                                    <input type="checkbox" id="common-mark-red-type-vote">
-                                    <label class="stl" for="common-mark-red-type-vote" i18n-content="mark_red_vote"></label>
-                                </div>
-                                <div class="block">
-                                    <input type="checkbox" id="common-remove-status">
-                                    <label class="stl" for="common-remove-status" i18n-content="common_remove_status"></label>
-                                </div>
+                                </div> 
                                 <div class="block">
                                     <input type="checkbox" id="common-state-onlineChange">
                                     <label class="stl" for="common-state-onlineChange" i18n-content="common_state_onlineChange"></label>
@@ -257,11 +249,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="block">
-                                        <input type="checkbox" id="audio-faster">
-                                        <label class="stl" for="audio-faster" i18n-content="audio_faster"></label>
-                                    </div>
+                                    </div> 
                                 </div>
                                 <h2>Видеозаписи</h2>
                                 <div class="block">
