Code style, tab size.

--- a/options/index.html
+++ b/options/index.html
@@ -177,7 +177,7 @@
                                             <label class="stl" for="audio-add-but" i18n-content="audio_add_but"></label>
                                             <div class="hidden-el">
                                                 <div class="block grey">
-                                                    <span>Название скаченной аудиозаписи:</span>
+                                                    <span>Название скачанной аудиозаписи:</span>
                                                     <input type="text" placeholder="Формат имени файла" id="audio-format-filename">
                                                     <div>
                                                         <ul>
@@ -266,9 +266,6 @@
                                     <span class="donate-label">Yandex.Money:</span>
                                     <span class="donate-val">410012023528604</span>
                                 </div>
-
-                                <!-- Разместите этот код в том месте, где должен отображаться виджет -->
-<div class="ewm-widget-donate" data-guid="9b6f8a2e-707c-45f6-9788-5889eccb67c2" data-type="widget" data-height="169" data-width="192"></div>
                             </div>
                         </div>
                     </div>
