--- a/options/index.html
+++ b/options/index.html
@@ -115,6 +115,13 @@
                                                 <span class="labelx green">Требуется доступ к Last.fm API</span>
                                             </label>
                                             <div class="hidden-el">
+
+                                                <div class="block">
+                                                    <input type="checkbox" id="sidebar-lastfm-autoshow">
+                                                    <label class="stl" for="sidebar-lastfm-autoshow">Автоматически открывать сайдбар.
+                                                    </label>
+                                                </div>
+
                                                 <div class="block">
                                                     <input type="checkbox" id="sidebar-lastfm-groupbyalbum">
                                                     <label class="stl" for="sidebar-lastfm-groupbyalbum">Группировать треки по альбомам
@@ -258,6 +265,9 @@
                                     <div class="hidden-el">
                                     </div>
                                 </div>
+
+                                <h2>Группы</h2> 
+                                <h2>Сообщения</h2> 
                             </div>
                         </div>
                         <div id="donate-tab">
@@ -271,8 +281,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <script src="ui.js"></script>
+        </div> 
         <script src="init.js"></script>
     </body>
 </html>
