--- a/options/index.html
+++ b/options/index.html
@@ -184,7 +184,7 @@
                                             <label class="stl" for="audio-add-but" i18n-content="audio_add_but"></label>
                                             <div class="hidden-el">
                                                 <div class="block grey">
-                                                    <span>Название скачанной аудиозаписи:</span>
+                                                    <span>Формат названия скачанной аудиозаписи:</span>
                                                     <input type="text" placeholder="Формат имени файла" id="audio-format-filename">
                                                     <div>
                                                         <ul>
@@ -193,7 +193,7 @@
                                                             <li><span>%d</span><span class="defis">—</span>Длительность</li>
                                                             <li><span>%i</span><span class="defis">—</span>ID трека</li>
                                                             <li><span>%e</span><span class="defis">—</span>Расширение файла</li>
-                                                            <li><span>%n</span><span class="defis">—</span>Позиция трека в аудиозаписях</li>
+                                                            
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -258,22 +258,12 @@
                                         </div>
                                     </div> 
                                 </div>
-                                <h2>Видеозаписи</h2>
-                                <div class="block">
-                                    <input type="checkbox" id="video-download-enable">
-                                    <label class="stl" for="video-download-enable" i18n-content="video_download_enable"></label>
-                                    <div class="hidden-el">
-                                    </div>
-                                </div>
-
-                                <h2>Группы</h2> 
-                                <h2>Сообщения</h2> 
                             </div>
                         </div>
                         <div id="donate-tab">
                             <div class="tab-content">
                                 <div>
-                                    <span class="donate-label">Yandex.Money:</span>
+                                    <span class="donate-label">Webmoney:</span>
                                     <span class="donate-val">410012023528604</span>
                                 </div>
                             </div>
