--- a/options/index.html
+++ b/options/index.html
@@ -12,7 +12,7 @@
         <script src="/js/engine/constants.js"></script>
         <script src="/js/engine/core/core.js"></script>
         <script src="/js/engine/core/dom.js"></script>
-        <script src="/js/engine/core/event.js"></script>
+        <script src="/js/engine/core/events.js"></script>
         <script src="/js/engine/core/storage.js"></script>
         <script src="/js/engine/api/support.js"></script>
         <script src="/js/engine/api/methods.js"></script>
