--- a/options/index.html
+++ b/options/index.html
@@ -44,7 +44,7 @@
                                     <div class="hidden-el">
                                         <div class="block">
                                             <input type="checkbox" id="lastfm-disable-repeatScrobble">
-                                            <label class="stl" for="lastfm-disabel-repeatScrobble">Скробблить аудиозаписи на повторе только 1 раз</label>
+                                            <label class="stl" for="lastfm-disable-repeatScrobble">Скробблить аудиозаписи на повторе только 1 раз</label>
                                         </div>
                                         <div class="block">
                                             <span i18n-content="start_scrobble"></span>
@@ -211,7 +211,7 @@
                                             <p> Для того, чтобы настроить горячие клавиши, необходимо:</p>
                                                             
                                             <p>1) Перейти по адресу <a href="" data-href="chrome://extensions/">chrome://extension/</a></p>
-                                            <p>2) Внизу страницы найти кнопку со словами "Быстрые клавиши" (chrome) или "Горячие клавишы для расширений" (opera)</p>
+                                            <p>2) Внизу страницы найти кнопку со словами "Быстрые клавиши" (chrome) или "Горячие клавиши для расширений" (opera)</p>
 
                                         </div>
                                     </div>
