--- a/options/index.html
+++ b/options/index.html
@@ -46,6 +46,14 @@
                                             <input type="checkbox" id="lastfm-disable-repeatScrobble">
                                             <label class="stl" for="lastfm-disable-repeatScrobble">Скробблить аудиозаписи на повторе только 1 раз</label>
                                         </div>
+                                         <div class="block">
+                                            <input type="checkbox" id="lastfm-disable-russian">
+                                            <label class="stl" for="lastfm-disable-russian">Не скробблить аудиозаписи, если в их названиях присутсвуют русские буквы =)</label>
+                                        </div>
+                                        <div class="block">
+                                            <input type="checkbox" id="lastfm-update-nowplaying">
+                                            <label class="stl" for="lastfm-update-nowplaying">Now playing</label>
+                                        </div>
                                         <div class="block">
                                             <span i18n-content="start_scrobble"></span>
                                             <select id="lastfm-percent">
